try install node in taskfile

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -12,6 +12,9 @@ tasks:
         # installs nvm (Node Version Manager)
         curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash
       - |
+        export NVM_DIR="$HOME/.nvm"
+        [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+
         # download and install Node.js (you may need to restart the terminal)
         nvm install 20
 
